Event and Room Booking Validation Complete

--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -4567,3 +4567,9 @@ form .stars label:before {
 .help-block{
     color: #cc0000;
 }
+
+#register-button{
+    text-transform: none;
+    padding: 0px;
+    height: 20px
+}
